Fix spacing in user info card

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,6 +128,9 @@ main {
   width: 360px;
   height: 315px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .daily-stats {
@@ -162,7 +165,7 @@ main {
 }
 
 .dashboard-subhead {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .daily-sleep-column {
